bug: fixed overlapping of stack cards

--- a/main.css
+++ b/main.css
@@ -115,9 +115,13 @@ body, html {
 
 .stack-cards {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
 }
 
+.stack-cards>* {
+  flex: 1 1 33.33%;
+  margin: 10px;
+}
 .stack__heading {
   text-align: center;
   font-size: 25px;
@@ -128,7 +132,6 @@ body, html {
   border: 2px solid #fff;
   border-radius: 10px;
   padding: 20px;
-  margin: 20px 0;
 }
 
 .stack__image {
@@ -231,14 +234,10 @@ body, html {
 
   .stack {
     flex: 1;
-    margin-right: 20px;
+    /* margin-right: 20px; */
   }
 
-  .stack-cards {
-    flex-direction: row;
-    flex-flow: row-wrap;
-
-  }
+  
 }
 
 @media screen and (min-width: 1020px) {
